--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cloud_firestore: ^4.8.2
   google_sign_in: ^6.1.6
   fluttertoast: ^8.2.4
+  another_flutter_splash_screen: ^1.2.0
  
   
 
